--- a/v1/styles.css
+++ b/v1/styles.css
@@ -1,4 +1,9 @@
-body {
-	background-color: black;
-	color: white;
+#default-newtab {
+    width: 100vw;
+    height: 100vh;
+    border: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1; /* Keeps the background on top */
 }
