--- a/v5/v5c/styles.css
+++ b/v5/v5c/styles.css
@@ -24,7 +24,37 @@ h2 {
     font-weight: bold;
 }
 
+button {
+    margin-bottom: 20px;
+    background-color: lavender;
+    color: black;
+    text-decoration: none;
+    font-size: 13px;
+    padding: 6px 10px;
+    /* border-radius: 5px; */
+}
 
+button:hover {
+    background-color: black;
+    color: lavender;
+}
+
+#search-bar {
+    background: rgb(31, 31, 31);
+    color: rgb(196, 196, 196);
+}
+
+#custom-title {
+    background: rgb(31, 31, 31);
+    color: rgb(196, 196, 196);
+    padding: 6px 10px;
+}
+
+#custom-url {
+    background: rgb(31, 31, 31);
+    color: rgb(196, 196, 196);
+    padding: 6px 10px;
+}
 
 #hopecore-link {
     display: inline-block;
