--- a/v5/v5c/styles.css
+++ b/v5/v5c/styles.css
@@ -32,6 +32,7 @@ button {
     font-size: 13px;
     padding: 6px 10px;
     /* border-radius: 5px; */
+    transition: 0.3s;
 }
 
 button:hover {
@@ -57,19 +58,18 @@ button:hover {
 }
 
 #hopecore-link {
-    display: inline-block;
-    margin-top: 50px;
-    padding: 10px 20px;
-    background-color: rosybrown;
-    color: aliceblue;
+    background: rgb(65, 65, 65);
+    color: lavender;
     text-decoration: none;
-    border-radius: 5px;
-    font-size: 1.2em;
+    font-size: 15px;
+    position: absolute;
+    top: 50px;
+    right: 80px;
 }
 
 #hopecore-link:hover {
-    background-color: lavenderblush;
-    color: darksalmon;
+    background-color: black;
+    color: plum;
 }
 
 
