--- a/v6/pre_integration/v4/styles.css
+++ b/v6/pre_integration/v4/styles.css
@@ -8,8 +8,41 @@ body {
     transition: background 0.3s ease-in-out;
 }
 
+/* #status {
+    position: absolute;
+    bottom: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+    text-align: center;
+} */
+
 .container {
     margin-top: 50px;
+}
+
+#MAL-toggle {
+    background: rgb(65, 65, 65);
+    color: lavender;
+    text-decoration: none;
+    font-size: 15px;
+    position: absolute;
+    top: 90px;
+    right: 80px;
+    transition: background-color 0.3s, color 0.3s;
+}
+
+#MAL-toggle:hover {
+    background-color: plum;
+    color: black;
+}
+
+#username {
+    border-radius: 5px;
+    border: none;
+}
+
+#header {
+    border-radius: 5px;
 }
 
 input,
@@ -17,4 +50,45 @@ button {
     padding: 10px;
     margin: 10px;
     font-size: 16px;
+    transition: background-color 0.3s, color 0.3s;
+}
+
+.anime-wrapper {
+    display: flex;
+    align-items: center;
+    position: relative;
+    margin-bottom: 10px;
+}
+
+button {
+    padding: 10px;
+    border: none;
+    background: rgb(65, 65, 65);
+    color: lavender;
+    cursor: pointer;
+    border-radius: 5px;
+    margin-right: 10px;
+    transition: background-color 0.3s, color 0.3s;
+}
+
+button:hover {
+    background-color: plum;
+    color: black;
+}
+
+.close-button {
+    font-size: 16px;
+    color: white;
+    background-color: crimson;
+    border: none;
+    padding: 5px 8px;
+    border-radius: 50%;
+    cursor: pointer;
+    position: absolute;
+    top: -5px;
+    right: -5px;
+}
+
+.close-button:hover {
+    background-color: darkred;
 }
