--- a/v6/pre_integration/v4/user_gen/anime/styles.css
+++ b/v6/pre_integration/v4/user_gen/anime/styles.css
@@ -20,7 +20,7 @@ body {
     margin-top: 50px;
 }
 
-#MAL-toggle {
+#btn-toggle {
     background: rgb(65, 65, 65);
     color: lavender;
     text-decoration: none;
@@ -31,12 +31,12 @@ body {
     transition: background-color 0.3s, color 0.3s;
 }
 
-#MAL-toggle:hover {
+#btn-toggle:hover {
     background-color: plum;
     color: black;
 }
 
-#username {
+#animeName {
     border-radius: 5px;
     border: none;
 }
