--- a/v6/integration/user_gen/character/styles.css
+++ b/v6/integration/user_gen/character/styles.css
@@ -36,6 +36,22 @@ body {
     color: black;
 }
 
+#switch-link {
+    background: rgb(65, 65, 65);
+    color: lavender;
+    text-decoration: none;
+    font-size: 15px;
+    position: absolute;
+    top: 90px;
+    left: 80px;
+    transition: background-color 0.3s, color 0.3s;
+}
+
+#switch-link:hover {
+    background-color: plum;
+    color: black;
+}
+
 #characterName {
     border-radius: 5px;
     border: none;
